#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

SH-2009-08-27-0: Bugfix:     Usage test aborts with tcl-error
                 Belongs to: CR-2009-08-10-0
                 Review:     DG

RH-2009-08-26-0: Enhancem.:  Hedeby: Adjustments for check in of the bound
                                     resource reporter changes
                 Review:     TB

JF-2009-08-24-0: Enhancem.:  Testsuite test for RFI 6684887
                 Review:     HP

LP-2009-08-20-0: Enhancem.:  Updated installation messages
                 Enhancem.:  Minor formatting enhancements for Hudson reports
                 Review:     AP

LP-2009-08-19-0: Enhancem.:  Speeded up throughput test on failure
                 Bugfix:     Fixed broken 'fast_setup check install_core_system'
                             combination
                 Belongs to: LP-2009-08-17-0
                 Enhancem.:  Issue 1330 test now uses setup function with 99
                             return code
                 Enhancem.:  Part of JSV tests now returns 99 when hudson is
                             used (can't run in parallel)
                 Enhancem.:  Improved issue 540 test so that it can be run in
                             parallel
                 Review:     JF

LP-2009-08-17-0: Enhancem.:  New option --hudson_reports <LEVEL> to generate
                             XML reports for each check_name in junit format
                 Enhancem.:  Basic support for muptiple --check arguments(only
                             with -fast_setup) e.g.: -check bugs 0 -check
                             system_tests 0