@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+JG-2009-09-04-0: Bugfix:     qstat test_issue123 failed from time to time
+                 Review:     MD
 
 SH-2009-08-27-0: Bugfix:     Usage test aborts with tcl-error
                  Belongs to: CR-2009-08-10-0
